added functions and docstrings

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "available-budget",
    "metadata": {},
    "outputs": [],
@@ -23,18 +23,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "modern-polymer",
+   "execution_count": 3,
+   "id": "gross-capital",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('athlete_events.csv')\n",
-    "regions = pd.read_csv('noc_regions.csv')"
+    "def read_data(athletes_data='athlete_events.csv', noc_data='noc_regions.csv'):\n",
+    "    \"\"\"\n",
+    "    Function to read provided files and return as pandas DataFrame.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    data = pd.read_csv(athletes_data)\n",
+    "    regions = pd.read_csv(noc_data)\n",
+    "    return data, regions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "perfect-mustang",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, regions = read_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ahead-wales",
    "metadata": {},
    "outputs": [
@@ -152,7 +168,7 @@
        "2       Football Men's Football   NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "incorporate-orleans",
    "metadata": {},
    "outputs": [
@@ -286,7 +302,7 @@
        "max      2016.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "colored-satellite",
    "metadata": {},
    "outputs": [
@@ -336,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "effective-camel",
    "metadata": {},
    "outputs": [
@@ -396,7 +412,7 @@
        "2  ALB      Albania                   NaN"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
