added CRISP-DM methdology details

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -423,6 +423,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "overall-flash",
+   "metadata": {},
+   "source": [
+    "Content:  \n",
+    "    The file `athlete_events.csv` contains 271116 rows and 15 columns; Each row corresponds to an individual athlete competing in an individual Olympic event (athlete-events). The columns are the following:\n",
+    "- ID - Unique number for each athlete;  \n",
+    "- Name - Athlete's name;  \n",
+    "- Sex - M or F;  \n",
+    "- Age - Integer;  \n",
+    "- Height - In centimeters;  \n",
+    "- Weight - In kilograms;  \n",
+    "- Team - Team name;  \n",
+    "- NOC - National Olympic Committee 3-letter code;  \n",
+    "- Games - Year and season;  \n",
+    "- Year - Integer;  \n",
+    "- Season - Summer or Winter;  \n",
+    "- City - Host city;  \n",
+    "- Sport - Sport;  \n",
+    "- Event - Event;  \n",
+    "- Medal - Gold, Silver, Bronze, or NA.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "biological-sacramento",
+   "metadata": {},
+   "source": [
+    "###### Preparing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "royal-authorization",
    "metadata": {},
    "source": [
@@ -431,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "drawn-deposit",
    "metadata": {},
    "outputs": [],
@@ -441,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "authentic-tutorial",
    "metadata": {},
    "outputs": [
@@ -567,7 +599,7 @@
        "2       Football Men's Football   NaN  Denmark   NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "american-liechtenstein",
    "metadata": {},
    "outputs": [
@@ -622,12 +654,12 @@
    "id": "bizarre-forestry",
    "metadata": {},
    "source": [
-    "###### Cleaning"
+    "###### Filling missing information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "emerging-pension",
    "metadata": {},
    "outputs": [
@@ -671,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "identical-business",
    "metadata": {},
    "outputs": [],
@@ -685,6 +717,43 @@
    "metadata": {},
    "source": [
     "###### Q1: Most participated event"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "endangered-option",
+   "metadata": {},
+   "source": [
+    "Let's look at total number of Events to get some idea."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "serial-reserve",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "765"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Event'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "centered-workplace",
+   "metadata": {},
+   "source": [
+    "Now, to get count of participating athletes in these events:"
    ]
   },
   {
@@ -750,6 +819,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "economic-amazon",
+   "metadata": {},
+   "source": [
+    "Looking at the other end of the list:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "continent-latin",
@@ -783,8 +860,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "proof-convert",
+   "metadata": {},
+   "source": [
+    "Let's look at the `Medal` column first to get idea about the data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
+   "id": "working-blend",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['DNW', 'Gold', 'Bronze', 'Silver'], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Medal'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pressed-beach",
+   "metadata": {},
+   "source": [
+    "Now to only look at `Gold` winners, we will filter based on it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "illegal-airplane",
    "metadata": {},
    "outputs": [
@@ -794,7 +908,7 @@
        "(13372, 17)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "coated-natural",
    "metadata": {},
    "outputs": [],
@@ -816,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "simplified-listening",
    "metadata": {},
    "outputs": [
@@ -830,7 +944,7 @@
        "Name: ID, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "primary-space",
    "metadata": {},
    "outputs": [
@@ -868,6 +982,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "voluntary-plate",
+   "metadata": {},
+   "source": [
+    "Least `Gold` winning NOCs include:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "natural-vermont",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NOC\n",
+       "KOS    1\n",
+       "NEP    1\n",
+       "PUR    1\n",
+       "Name: ID, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q2[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "digital-reservoir",
    "metadata": {},
    "source": [
@@ -875,8 +1022,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "married-privacy",
+   "metadata": {},
+   "source": [
+    "To look at the weight distribution of athletes over time, we will use boxplot.  \n",
+    "They are built to provide high-level information at a glance, offering general information about a group of data's symmetry, skew, variance, and outliers.  \n",
+    "\n",
+    "We will differentiate based on `Sex` because both sexes have different biological normals."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "adequate-inspector",
    "metadata": {},
    "outputs": [
@@ -899,6 +1057,22 @@
     "sns.despine(offset=10)\n",
     "plt.title('Distribution of height over time')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "elegant-insert",
+   "metadata": {},
+   "source": [
+    "These plots show that for both men and women, height has increased gradually over the history of the Games."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "willing-sample",
+   "metadata": {},
+   "source": [
+    "As I foot note I would like to add that the third plot could be hiding important variation since different body types are favored in different events. To explore this possibility, we must dive deeper into the data and consider trends in size separately for different events."
    ]
   }
  ],
